--- a/dev/assets/custom.css
+++ b/dev/assets/custom.css
@@ -6,7 +6,7 @@
     margin-bottom: 12px;     /* 下の名前との距離 */
 }
 
-article#documenter-page img[src$=".svg"][alt*="Example block"] {
+article#documenter-page img {
     display: block;
     margin-left: auto;
     margin-right: auto;
